# tiny-data-wharehouse

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
local_data/gdp/: API_NY.GDP.MKTP.KD.ZG_DS2_en_csv_v2_401130.csv  Metadata_Country_API_NY.GDP.MKTP.KD.ZG_DS2_en_csv_v2_401130.csv
notebooks/: first.ipynb  test_corrupt_parquet.ipynb
test/: test_first.py  test_locking.py  test_table.py
tiny_data_warehouse/: __init__.py  base_table.py  data_warehouse.py
tiny_data_warehouse/social/: social_warehouse.py
tiny_data_wharehouse/: data_wharehouse.py
