[tool.poetry]
name = "tiny-data-warehouse"
version = "0.2.2"
description = ""
authors = ["Jean Carlo Machado <jean.machado@getyourguide.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.1"
fire = "^0.6.0"
pypdf2 = "^3.0.1"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
pyarrow = "^16.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tinydw = 'tiny_data_warehouse.data_warehouse:main'
tdw = 'tiny_data_warehouse.data_warehouse:main'
