[tool.poetry]
name = "tiny-data-warehouse"
version = "0.3.1"
description = ""
authors = ["Jean Carlo Machado <jean.machado@getyourguide.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = "*"
fire = "*"
pypdf2 = "*"
matplotlib = "*"
pyarrow = "*"
filelock = "*"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tinydw = 'tiny_data_warehouse.data_warehouse:main'
tdw = 'tiny_data_warehouse.data_warehouse:main'
